#
# Copyright (c) 2023 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#

[package]
rust-version = "1.66.1"
version = "0.11.1-dev"
repository = "https://github.com/eclipse-zenoh/zenoh"
homepage = "http://zenoh.io"
edition = "2021"
license = "EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]
description = "Zenoh: Zero Overhead Pub/sub, Store/Query and Compute."
name = "zenoh_jni"

[features]
default = ["zenoh/default", "zenoh-ext/default"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
android-logd-logger = "0.4.0"
async-std = { version = "=1.12.0", default-features = false }
clap = "3.2.23"
jni = "0.21.1"
flume = "0.10.14"
uhlc = "0.7.0"
json5 = "0.4.1"
zenoh = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false }
zenoh-ext = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false }
zenoh-util = { version = "0.11.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main" }
tracing = "0.1"
[lib]
name = "zenoh_jni"
crate_type = ["staticlib", "dylib"]

[build-dependencies]
rustc_version = "0.4.0"

[profile.release]
debug = false     # If you want debug symbol in release mode, set the env variable: RUSTFLAGS=-g
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
